test/library/standard/List/bradc/emptySeq3.good
emptySeq3.chpl:3: error: unresolved call 'list(int(64)).init=(nil)'
$CHPL_HOME/modules/standard/List.chpl:77: note: candidates are: list.init=(l: this.type )
