test/library/standard/List/bradc/emptySeq3.chpl
use LinkedLists;

var s: linkedList(int) = nil;

writeln("s is: ", s);
